Image Upload Support

--- a/app/views/screens/show.html.erb
+++ b/app/views/screens/show.html.erb
@@ -1,14 +1,5 @@
 <%= @slide.name %>
 <p>Slide Number:<%= params[:slide] %></p>
 
-<% @slide.style %>
-<% case @slide.style %>
-<% when "markup" %>
-  <%= @slide.markup.html_safe %>
-<% when "image" %>
-  <p> Image!</p>
-<% when "libcal-all-schedule-slide" %>
-  <p> Render libcal</p>
-<% else %>
-  <p> Something else, gotta handle '<%= @slide.style %>'</p>
-<% end %>
+<p><%= @slide.style %></p>
+<%= @slide.decorate.rendered_content %>
