--- a/app/views/layouts/screen.html.erb
+++ b/app/views/layouts/screen.html.erb
@@ -12,7 +12,7 @@
 
   <body class="screen-layout <%= screen_rotation %>" data-next-slide-url="<%= next_slide_url %>" data-slide-length="<%= slide_length %>">
     <% if dual_layout? %>
-      <%= render partial: "layouts/screens/dual/top", locals: { screen: @screen } %>
+      <%= render partial: "layouts/screens/dual/top", locals: { room: @screen.rooms.first } %>
     <% end %>
 
     <div class="slide">
@@ -20,11 +20,11 @@
     </div>
 
     <% if dual_layout? %>
-      <%= render partial: "layouts/screens/dual/bottom", locals: { screen: @screen } %>
+      <%= render partial: "layouts/screens/dual/bottom", locals: { room: @screen.rooms.last } %>
     <% end %>
 
     <% if single_layout? %>
-      <%= render partial: "layouts/screens/single/bottom", locals: { screen: @screen } %>
+      <%= render partial: "layouts/screens/single/bottom", locals: { room: @screen.rooms.last } %>
     <% end %>
   </body>
 </html>
