--- a/app/views/layouts/screens/dual/_bottom.html.erb
+++ b/app/views/layouts/screens/dual/_bottom.html.erb
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col-6 center">
       <h1>
-        <%= screen.rooms.last.name %>
+        <%= room.name %>
       </h1>
     </div>
 
     <div class="col-3 center">
-      <p id="up-next"></p>
+      <p id="up-next"><%= room.decorate.availability %></p>
     </div>
 
     <div class="col-3 center">
