--- a/app/views/layouts/screens/dual/_top.html.erb
+++ b/app/views/layouts/screens/dual/_top.html.erb
@@ -5,12 +5,12 @@
     </div>
 
     <div class="col-3 center">
-      <p id="up-next"></p>
+      <p id="up-next"><%= room.decorate.availability %></p>
     </div>
 
     <div class="col-6 center">
       <h1>
-        <%= screen.rooms.first.name %>
+        <%= room.name %>
       </h1>
     </div>
   </div>
