--- a/app/views/layouts/screens/single/_bottom.html.erb
+++ b/app/views/layouts/screens/single/_bottom.html.erb
@@ -1,7 +1,7 @@
 <div class="room-details room-details__bottom full-height container">
   <div class="row">
     <div class="col-12 center">
-      <h1><%= screen.rooms.first.name %></h1>
+      <h1><%= room.name %></h1>
     </div>
   </div>
 
@@ -18,6 +18,7 @@
         <%= image_tag("OHIO_Patton_Logo_Black.gif") %>
       </p>
       <p id="up-next">
+        <%= room.decorate.availability %>
       </p>
     </div>
 
