--- a/app/views/screens/index.html.erb
+++ b/app/views/screens/index.html.erb
@@ -1,6 +1,6 @@
 <h2>All Screens</h2>
 <ul>
   <% @screens.each do |screen|  %>
-    <%= link_to screen.name, screen_path(screen) %>
+    <li><%= link_to screen.name, screen_path(screen) %></li>
   <% end%>
 </ul>
