Load slide renders lazily

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ $wheat: #ffdb00;
 
 $off_white: #fcf4ea;
 
-body {
+body.screen-layout {
   position: absolute;
   width: 720px;
   height: 1280px;
