--- a/app/views/layouts/screens/_too_many_rooms.html.erb
+++ b/app/views/layouts/screens/_too_many_rooms.html.erb
@@ -1,3 +1,3 @@
 <h1>ERROR</h1>
 
-<p><%= @screen.name %> has only too many rooms configured; Please remove extra rooms or change your layout</p>
+<p><%= @screen.name %> has too many rooms configured; Please remove extra rooms or change your layout</p>
