--- a/app/views/layouts/screen.html.erb
+++ b/app/views/layouts/screen.html.erb
@@ -6,6 +6,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <!-- Don't have turbolinks cache -->
+    <meta name="turbolinks-cache-control" content="no-cache">
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
