--- a/app/views/slides/_libcal-all-schedule-slide.html.erb
+++ b/app/views/slides/_libcal-all-schedule-slide.html.erb
@@ -3,25 +3,29 @@
 <% end %>
 <%- all_rooms = Room.all.decorate %>
 
-<section class="all-schedule-frame" style="display: block;">
-  <div id="schedule">
-    <table>
-      <tr class="header">
-        <th>Room Name</th>
-        <% all_times.each do |time| %>
-          <th><%= time.strftime("%l %p") %></th>
-        <% end%>
-      </tr>
-      <% all_rooms.each do |room| %>
-        <tr>
-          <td class="name"><%= room.name %></td>
+<div class="grid">
+  <div class="grid__col grid__col--12-of-12">
+    <div class="all-schedule-frame">
+      <div id="schedule">
+        <table>
+          <tr class="header">
+            <th>Room Name</th>
+            <% all_times.each do |time| %>
+              <th><%= time.strftime("%l %p") %></th>
+            <% end%>
+          </tr>
+          <% all_rooms.each do |room| %>
+            <tr>
+              <td class="name"><%= room.name %></td>
 
-          <% all_times.each do |time| %>
-            <% avaliable_class = room.is_available_at?(time) ? "available" : "" %>
-            <td class="timeslot <%= avaliable_class %>"></td>
+              <% all_times.each do |time| %>
+                <% avaliable_class = room.is_available_at?(time) ? "available" : "" %>
+                <td class="timeslot <%= avaliable_class %>"></td>
+              <% end %>
+            </tr>
           <% end %>
-        </tr>
-      <% end %>
-    </table>
+        </table>
+      </div>
+    </div>
   </div>
-</section>
+</div>
