--- a/app/views/layouts/screens/_too_many_rooms.html.erb
+++ b/app/views/layouts/screens/_too_many_rooms.html.erb
@@ -1,3 +1,9 @@
-<h1>ERROR</h1>
+<div class="grid">
+  <div class="grid__col grid__col--12-of-12">
+    <h1>ERROR</h1>
+  </div>
 
-<p><%= @screen.name %> has too many rooms configured; Please remove extra rooms or change your layout</p>
+  <div class="grid__col grid__col--12-of-12">
+    <p><%= @screen.name %> has too many rooms configured; Please remove extra rooms or change your layout</p>
+  </div>
+</div>
