--- a/app/views/screens/index.html.erb
+++ b/app/views/screens/index.html.erb
@@ -1,6 +1,13 @@
-<h2>All Screens</h2>
-<ul>
-  <% @screens.each do |screen|  %>
-    <li><%= link_to screen.name, screen_path(screen) %></li>
-  <% end%>
-</ul>
+<div class="grid">
+  <div class="grid__col grid__col--12-of-12">
+    <h2>PCOE - All Screens</h2>
+  </div>
+
+  <div class="grid__col grid__col--12-of-12">
+    <ul>
+      <% @screens.each do |screen|  %>
+        <li><%= link_to screen.name, screen_path(screen) %></li>
+      <% end%>
+    </ul>
+  </div>
+</div>
