Add Initial Documentation

--- a/app/views/screens/index.html.erb
+++ b/app/views/screens/index.html.erb
@@ -10,4 +10,8 @@
       <% end%>
     </ul>
   </div>
+
+  <div class="grid__col grid__col--12-of-12">
+    <%= link_to "Administrator Login", admin_root_path %>
+  </div>
 </div>
