--- a/app/views/layouts/screens/single/_bottom.html.erb
+++ b/app/views/layouts/screens/single/_bottom.html.erb
@@ -7,9 +7,7 @@
 
   <div class="grid">
     <div class="grid__col grid__col--3-of-12 center">
-      <p id="qrcode">
-        <%= qr_code %>
-      </p>
+      <p><%= qr_code %></p>
       <p class="center">Schedule Room</p>
     </div>
 
@@ -22,7 +20,7 @@
       </p>
     </div>
 
-    <div class="grid__col grid__col--3-of-12" center>
+    <div class="grid__col grid__col--3-of-12 center">
       <p id="logo">
         <%= image_tag("CalledToLead-Blue.gif") %>
       </p>
