--- a/app/views/layouts/screens/dual/_bottom.html.erb
+++ b/app/views/layouts/screens/dual/_bottom.html.erb
@@ -1,15 +1,22 @@
 <div class="room-details room-details__bottom half-height">
   <div class="grid">
-    <div class="grid__col grid__col--6-of-12 center">
-      <h1><%= room.name %></h1>
+    <div class="grid__col grid__col--12-of-12 center">
+      <h1 id="room-name"><%= room.name %></h1>
+    </div>
+  </div>
+
+  <div class="grid">
+    <div class="grid__col grid__col--2-of-12 center">
+      <p><%= left_arrow %></p>
     </div>
 
-    <div class="grid__col grid__col--3-of-12 center">
+    <div class="grid__col grid__col--8-of-12 center">
       <p id="up-next"><%= room.decorate.availability %></p>
     </div>
 
-    <div class="grid__col grid__col--3-of-12 center">
-      <%= qr_code %>
+    <div class="grid__col grid__col--2-of-12 center">
+      <p><%= qr_code %></p>
     </div>
+
   </div>
 </div>
