Cleanup for Readability

--- a/app/views/slides/_libcal-all-schedule-slide.html.erb
+++ b/app/views/slides/_libcal-all-schedule-slide.html.erb
@@ -20,10 +20,10 @@ div.all-schedule-frame table td.timeslot.available {
 </style>
 
 <!-- Variables -->
-<%- all_times = 5.times.map do |index| %>
-  <%- Time.now.change(min: 0, sec: 0, nsec: 0) + (index - 0).hour %>
+<% all_times = 5.times.map do |index| %>
+  <% Time.now.change(min: 0, sec: 0, nsec: 0) + (index - 0).hour %>
 <% end %>
-<%- all_rooms = Room.all.decorate %>
+<% all_rooms = Room.all.decorate %>
 
 <!-- Markup/Logic -->
 <div class="grid">
@@ -34,7 +34,7 @@ div.all-schedule-frame table td.timeslot.available {
           <th>Room Name</th>
           <% all_times.each do |time| %>
             <th><%= time.strftime("%l %p") %></th>
-          <% end%>
+          <% end %>
         </tr>
         <% all_rooms.each do |room| %>
           <tr>
@@ -43,8 +43,8 @@ div.all-schedule-frame table td.timeslot.available {
 
             <!-- Available Times -->
             <% all_times.each do |time| %>
-              <% avaliable_class = room.is_available_at?(time) ? "available" : "" %>
-              <td class="timeslot <%= avaliable_class %>"></td>
+              <% avaliable_class = room.is_available_at?(time) ? "available" : nil %>
+              <td class="<%= ["timeslot", avaliable_class].compact.join(" ") %>"></td>
             <% end %>
           </tr>
         <% end %>
