--- a/app/views/slides/_libcal-all-schedule-slide.html.erb
+++ b/app/views/slides/_libcal-all-schedule-slide.html.erb
@@ -3,6 +3,7 @@
 div.all-schedule-frame table {
   padding-top: 375px;
   font-size: 16px;
+  color: black;
 }
 div.all-schedule-frame table th {
   text-align: left;
@@ -10,6 +11,13 @@ div.all-schedule-frame table th {
   font-size: 14px;
   font-weight: lighter;
   border-bottom: 1px solid #08324f;
+  color: black;
+}
+div.all-schedule-frame table td {
+  color: black;
+}
+div.all-schedule-frame .name {
+  padding-right: 15px;
 }
 div.all-schedule-frame table td.timeslot {
   background-color: #a10037;
