Improve slides and wrap EVERYTHING in a grid

--- a/app/views/slides/_libcal-all-schedule-slide.html.erb
+++ b/app/views/slides/_libcal-all-schedule-slide.html.erb
@@ -1,14 +1,14 @@
 <!-- Style -->
 <style>
-div.all-schedule-frame table {
-  padding-top: 375px;
-  font-size: 16px;
+div.all-schedule-frame {
+  padding-top: 250px;
+  font-size: 24px;
   color: black;
 }
 div.all-schedule-frame table th {
   text-align: left;
   padding: 0.5em;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: lighter;
   border-bottom: 1px solid #08324f;
   color: black;
@@ -17,7 +17,7 @@ div.all-schedule-frame table td {
   color: black;
 }
 div.all-schedule-frame .name {
-  padding-right: 15px;
+  padding-right: 20px;
 }
 div.all-schedule-frame table td.timeslot {
   background-color: #a10037;
@@ -36,7 +36,8 @@ div.all-schedule-frame table td.timeslot.available {
 <!-- Markup/Logic -->
 <div class="grid">
   <div class="grid__col grid__col--12-of-12">
-    <div class="all-schedule-frame">
+    <div class="all-schedule-frame center">
+      <h3>Project Room Availability</h3>
       <table align="center">
         <tr>
           <th>Room Name</th>
