Replace the OU logo with a white option

--- a/app/views/layouts/screens/single/_bottom.html.erb
+++ b/app/views/layouts/screens/single/_bottom.html.erb
@@ -14,7 +14,7 @@
     <div class="grid__col grid__col--6-of-12 center">
       <p id="up-next"><%= room.decorate.availability %></p>
       <p id="ou-logo">
-        <%= image_tag("OHIO_Patton_Logo_Black.gif", height: "100px") %>
+        <%= image_tag("OHIO_Patton_Logo_White.png") %>
       </p>
     </div>
 
