--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pcoe de Signage </title>
+    <title><%= t("site.title", name: "Home") %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
