Add dynamic qr_code for each room

--- a/app/views/layouts/screens/dual/_bottom.html.erb
+++ b/app/views/layouts/screens/dual/_bottom.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="grid__col grid__col--2-of-12 center">
-      <p><%= qr_code %></p>
+      <p><%= qr_code(room) %></p>
       <p class="center">Schedule Room</p>
     </div>
 
