--- a/app/views/layouts/screens/dual/_top.html.erb
+++ b/app/views/layouts/screens/dual/_top.html.erb
@@ -7,7 +7,7 @@
 
   <div class="grid">
     <div class="grid__col grid__col--2-of-12 center">
-      <p><%= qr_code %></p>
+      <p><%= qr_code(room) %></p>
       <p class="center">Schedule Room</p>
     </div>
 
