--- a/app/views/event_requests/new.html.erb
+++ b/app/views/event_requests/new.html.erb
@@ -1,19 +1,33 @@
 <div class="row pt-2">
   <div class="col-md-6">
-    <h1>Schedule <%= @room.name %></h1>
+    <h1>Schedule <%= @form.context.room.name %></h1>
+  </div>
+</div>
+<div class="row pt-2">
+  <div class="col-md-12">
+    <% @form.errors.each do |error| %>
+      <%= error.inspect%>
+    <% end%>
   </div>
 </div>
 <div class="row pt-2">
   <div class="col-md-12">
     <%= form_with model: @form, url: room_event_requests_path do |f| %>
       <div class="form-group">
-        <%= f.label :email, for: :email %>
+        <%= f.label :ohioid %>
         <div class="input-group mb-3">
-          <%= f.text_field :email, required: true, placeholder: "OHIO ID", class: "form-control", aria: { label: "Scheduler's OHIO ID", describedby: "domain_append" } %>
+          <%= f.text_field :ohioid, required: true, placeholder: "OHIO ID", class: "form-control", aria: { label: "Scheduler's OHIO ID", describedby: "domain_append" } %>
           <div class="input-group-append">
             <span class="input-group-text" id="domain-append">@ohio.edu</span>
           </div>
         </div>
+      </div>
+      <div class="form-group">
+        <%= f.hidden_field :start_at %>
+        <%= f.label :date %>
+        <%= f.text_field :date, type: :date, min: "TODO", max: "TODO", required: true %>
+        <%= f.label :time %>
+        <%= f.text_field :time, type: :time, min: "TODO", max: "TODO", step: "1800", required: true %>
       </div>
       <div class="form-group">
         <%= f.label :duration %>
@@ -22,6 +36,9 @@
       <div class="form-group">
         <%= f.label :purpose %>
         <%= f.text_area :purpose, class: "form-control", rows: 3 %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Request" %>
       </div>
     <% end %>
   </div>
