--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
     <%= javascript_include_tag "application", 'data-turbolinks-track': "reload" %>
   </head>
 
-  <body>
+  <%= content_tag :body, class: [controller_name.classify, action_name.classify].join do %>
     <main class="container">
       <%= yield %>
     </main>
-  </body>
+  <% end %>
 </html>
