--- a/app/views/slides/_libcal-all-schedule-slide.html.erb
+++ b/app/views/slides/_libcal-all-schedule-slide.html.erb
@@ -48,7 +48,7 @@ div.all-schedule-frame .legend .unavailable {
 
 <!-- Variables -->
 <% all_times = 5.times.map do |index| %>
-  <% Time.now.change(min: 0, sec: 0, nsec: 0) + index.hour %>
+  <% Time.current.change(min: 0, sec: 0, nsec: 0) + index.hour %>
 <% end %>
 <% all_rooms = Room.with_libcal_identifier.decorate %>
 
