Make Rooms page the home page and utilize the shared "accessible" spec

--- a/app/views/screens/index.html.erb
+++ b/app/views/screens/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row pt-2">
-  <div class="col-md-6">
-    <h1>PCOE - All Screens</h1>
+  <div class="col-md-12">
+    <h1><%= t("site.app_name") %> - All Screens</h1>
   </div>
 </div>
 
