--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row pt-2">
-  <div class="col-md-6">
-    <h1>PCOE - All Rooms</h1>
+  <div class="col-md-12">
+    <h1><%= t("site.app_name") %> - All Rooms</h1>
   </div>
 </div>
 
