--- a/app/views/rooms/policies.html.erb
+++ b/app/views/rooms/policies.html.erb
@@ -1,13 +1,5 @@
 <div class="row pt-2">
-  <div class="col-md-6">
-    <h1>Room Policies</h1>
-  </div>
-</div>
-
-<div class="row pt-2">
-  <div class="col-md-6">
-    <%= @policy_paragraphs.each do |paragraph| %>
-      <%= content_tag :p, simple_format(paragraph) %>
-    <% end %>
+  <div class="col-md-12">
+    <%= Markdownify.render(@policy_md) %>
   </div>
 </div>
