Allow admins to edit settings and make settings persist

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -10,4 +10,9 @@
 // Active Admin's got SASS!
 @import "active_admin/mixins";
 @import "active_admin/base";
-@import "slides/defaults"
+@import "slides/defaults";
+
+#editor {
+  min-height: 300px;
+  height: 60vh;
+}
