--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -155,7 +155,7 @@
                         <!-- END EVENT DETAILS -->
                         <!-- START SIGNATURE -->
                         <p style="font-family: sans-serif; font-size: 16px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                          <%= SystemConfiguration.get(:emails, :signature).strip %>
+                          <%= Settings.emails.signature.strip %>
                         </p>
                         <!-- END SIGNATURE -->
                       </td>
